# ajazz-ak35i-v3-max

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  PROTOCOL.md  README.md  ajazz.1
.github/workflows/: build.yml
dependencies/stb/: stb_impl.cpp
gtk/: ajazz-gtk.desktop  animation_page.cpp  animation_page.h  device_manager.cpp  device_manager.h  image_page.cpp  image_page.h  lighting_page.cpp  lighting_page.h  main.cpp  time_page.cpp  time_page.h  window.cpp  window.h
src/: ajazz.cpp  ajazz.h  imgconv.cpp  imgconv.h  main.cpp
tests/: test_args.sh
udev/: 99-ajazz-ak35i.rules
